at least cube template writing /vfs/reports/*, detail export column selects /vfs/exports/*, docUploads /vfs/documents/*. Writing vfs bindings could be achieved via /WEB-INF/*/virtual/*.
* WRS request optional url attribute at bindingSet to pick servlet is moved to root WrsRequest element

.Server:
* Wrq does support CTE common table expressions, joins and unions now
* allow client sided setting of subject preferences via SubjectPreferences servlet and SubjectPreferencesRealm, using config from bcdui/conf/subjectPreferences.xml
* Introduced UserSettingsDefaults to subjectSettings.xml to specify user default permissions (add de.businesscode.bcdui.subjectsettings.SubjectPreferencesRealm to your realms)
* Database syntax does fully support MySQL and Redshift now

.Security
* New cookie settings in context.xml and web.xml
* Preventing some possible injections in server responses
* SubjectFilter can now be applied to virtual file system
* SubjectFilters resolved inline (i.e. value list) are using prepared statements now

.Development
* Made bcduiApiSubs.js available which can be used in IDEs for auto-suggest

==== Release 5_5_0

.Major new features:
* Migrated BCD-UI to Java 11
* Updated to log4j2
* Updated 3rd-party java libs
* Updated 3rd-party js libs
* Updated BCD-UI js code and documentation to ECMA 6 standard
* Removed jQuery Mobile

.Incompatibilities:
* Client
** Due to a security fix in latest jQuery, be sure you don't use self closing html elements in jQuery.append()/etc. (Example: <span/> -> <span></span>)
** echart uses new default colors, ensure to set colors in your projects and don't rely on default coloring
** Due to fontawesome/bootstrap/nouislider update, you need to rebuild your themes jar
** Grid pagination/action buttons are now in divs, so you may need to check your styling
** Grid editor bcduiSingleSelect was removed, use bcduiSimpleDropDown instead
** Moved QuickEdit to package bcdui.widgetNg